// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Throughline render goldens > Generate-Unit button is disabled in a live class session (hard block) 1`] = `
{
  "buttons": 11,
  "inputs": 1,
  "lengthBucket": 27,
  "sha": "ac93de0ea55f1354",
  "svgs": 1,
  "textareas": 0,
}
`;

exports[`Throughline render goldens > Generate-Unit capability wired → toolbar shows the ✨ button 1`] = `
{
  "buttons": 11,
  "inputs": 1,
  "lengthBucket": 27,
  "sha": "2057569e13d7a4c7",
  "svgs": 1,
  "textareas": 0,
}
`;

exports[`Throughline render goldens > host-wired empty (history + currentLesson + onOpenLesson) 1`] = `
{
  "buttons": 10,
  "inputs": 1,
  "lengthBucket": 25,
  "sha": "c9a176ad051de79d",
  "svgs": 1,
  "textareas": 0,
}
`;

exports[`Throughline render goldens > manual mode (5 props, empty) — empty state + manual-import hint 1`] = `
{
  "buttons": 9,
  "inputs": 1,
  "lengthBucket": 24,
  "sha": "a3213dacef1abcbb",
  "svgs": 1,
  "textareas": 0,
}
`;

exports[`Throughline render goldens > populated unit (seeded localStorage + matching history) — cards + edges 1`] = `
{
  "buttons": 15,
  "inputs": 1,
  "lengthBucket": 38,
  "sha": "de5ace32a60cb23e",
  "svgs": 1,
  "textareas": 0,
}
`;

exports[`Throughline render goldens > populated unit tolerates a dangling lessonId without crashing (normalize guard) 1`] = `
{
  "buttons": 17,
  "inputs": 1,
  "lengthBucket": 45,
  "sha": "5334171a0c8e7c6c",
  "svgs": 1,
  "textareas": 0,
}
`;

exports[`Throughline render goldens > units-aware empty (history with unitId + units prop) 1`] = `
{
  "buttons": 10,
  "inputs": 1,
  "lengthBucket": 25,
  "sha": "c9a176ad051de79d",
  "svgs": 1,
  "textareas": 0,
}
`;
